fix z-index

--- a/assets/styles/mobile-menu.css
+++ b/assets/styles/mobile-menu.css
@@ -30,7 +30,7 @@
         left: 10px;
         background: #ffffff;
         border-radius: 3px;
-        z-index: 1;
+        z-index: 3;
         transform-origin: 5px 0px;
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
             background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
